--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dezalgo": "1.0.3",
     "noddity-renderer": "4.0.0-alpha.1",
     "ractive": "0.7.3",
+    "random-uuid-v4": "0.0.5",
     "xtend": "4.0.0"
   }
 }
