--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "level-mem": "0.18.0",
     "noddity-butler": "2.1.1",
     "noddity-linkifier": "2.1.0",
+    "quotemeta": "0.0.0",
     "tape": "4.2.0"
   },
   "dependencies": {
     "async-each": "0.1.6",
     "cheerio": "0.19.0",
     "dezalgo": "1.0.3",
-    "noddity-renderer": "4.0.0-alpha.1",
+    "noddity-renderer": "4.0.0-alpha.2",
     "ractive": "0.7.3",
     "random-uuid-v4": "0.0.5",
     "xtend": "4.0.0"
