--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
   },
   "dependencies": {
     "async-each": "0.1.6",
-    "cheerio": "0.19.0",
     "dezalgo": "1.0.3",
-    "noddity-renderer": "4.0.0-alpha.2",
+    "noddity-template-parser": "1.0.0",
     "ractive": "0.7.3",
-    "random-uuid-v4": "0.0.5",
     "xtend": "4.0.0"
   }
 }
