--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "tape": "4.2.0"
   },
   "dependencies": {
-    "async-each": "0.1.6",
     "dezalgo": "1.0.3",
     "noddity-template-parser": "1.0.0",
     "ractive": "0.7.3",
+    "run-parallel": "1.1.4",
     "xtend": "4.0.0"
   }
 }
