--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "dezalgo": "1.0.3",
-    "noddity-template-parser": "1.0.0",
+    "noddity-template-parser": "~1.0.1",
     "ractive": "0.7.3",
     "run-parallel": "1.1.4",
     "xtend": "4.0.0"
