--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dezalgo": "1.0.3",
     "noddity-template-parser": "~1.0.1",
     "ractive": "0.7.3",
+    "random-uuid-v4": "0.0.5",
     "run-parallel": "1.1.4",
     "xtend": "4.0.0"
   }
